<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context="com.example.coursehandicap.ui.fragment.CourseHandicapResultsFragment">

    <TextView
        android:id="@+id/course_handicap_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/result_course_handicap"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/rounded_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_handicap_result_text_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:text="@string/rounded"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/course_handicap_result_rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_rounded"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_40"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/unrounded_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rounded_score">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:text="@string/unrounded"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/course_handicap_result_unrounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_unrounded"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_40"
            android:textStyle="bold" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>